Converted customTest.html
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/core/customTest.html
+++ b/test/core/customTest.html
@@ -15,39 +15,53 @@
   <script src="../testrunner.js"></script>
   <script>
     (function(global) {
-      global.quailTest = function() {
-        test('A custom test can be defined and run', function() {
-          var testResults = [];
-          var custom = {
-            customTestSelector : {
-              type : 'selector',
-              options: {
-                selector : '.error'
+      var custom = {
+        customTestSelector : {
+          type : 'selector',
+          options: {
+            selector : '.error'
+          }
+        },
+        customTestCallback : {
+          type : 'custom',
+          callback : function(quail, test, Case) {
+            test.get('$scope').find('p, h2').each(function() {
+              if ($(this).hasClass('callback-error')) {
+                test.add(Case({
+                  element: this,
+                  status: 'failed'
+                }));
               }
-            },
-            customTestCallback : {
-              type : 'custom',
-              callback : function(quail) {
-                quail.html.find('p, h2').each(function() {
-                  if($(this).hasClass('callback-error')) {
-                    quail.testFails('customTestCallback', $(this));
-                  }
-                });
+            });
+          }
+        }
+      };
+      var called = 0;
+      global.quailTest = function() {
+        asyncTest('A custom test can be defined and run', function() {
+          expect(2);
+          $('.test-area').quail({
+            jsonPath : '../../dist',
+            guideline : [ 'customTestSelector', 'customTestCallback' ],
+            reset : true,
+            customTests : custom,
+            complete : function(eventName, test, _case) {
+              if (test.get('name') === 'customTestSelector') {
+                ok($(_case.get('element')).is('p'), 'Found paragraph with selector');
+                ++called;
+              }
+              if (test.get('name') === 'customTestCallback') {
+                ok($(_case.get('element')).is('h2'), 'Found header with custom callback');
+                ++called;
+              }
+              if (called === 2) {
+                start();
               }
             }
-          };
-          $('.test-area').quail({ jsonPath : '../../dist',
-                              guideline : [ 'customTestSelector', 'customTestCallback' ],
-                              reset : true,
-                              customTests : custom,
-                              complete : function(results) {
-                                testResults = results.results;
-                              }});
-          equal(true, testResults.customTestSelector.elements[0].is('p'), 'Found paragraph with selector');
-          equal(true, testResults.customTestCallback.elements[0].is('h2'), 'Found header with custom callback');
+          });
         });
       };
-    })(this);
+    }(this));
   </script>
 </body>
 
