--- a/test/accessibility-tests/imgWithMathShouldHaveMathEquivalent.html
+++ b/test/accessibility-tests/imgWithMathShouldHaveMathEquivalent.html
@@ -6,10 +6,8 @@
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="imgWithMathShouldHaveMathEquivalent">
 		<p>The following image shows the uncertainty principle:</p>
-		<img src="../assets/math.png" alt="the heisenberg uncertainty principle" class="quail-failed-element" class="quail-failed-element"/>
+		<img src="../assets/math.png" alt="the heisenberg uncertainty principle" class="quail-failed-element"/>
 	</div>
-
-	<div class="quail-test" data-expected="pass" data-accessibility-test="imgWithMathShouldHaveMathEquivalent"></div>
 
 	<script src="../testrunner.js"></script>
 </body>
