--- a/test/accessibility-tests/tableHeaderLabelMustBeTerse.html
+++ b/test/accessibility-tests/tableHeaderLabelMustBeTerse.html
@@ -8,17 +8,14 @@
         <table border="1" summary="This simple data table demonstrates the use of summary">
             <caption>A Test Table</caption>
             <tr>
-                <td></td>
                 <th class="quail-failed-element" abbr="This abbreviation is much too long.">Col. 1 header really long text</th>
-                <th abbr="abbrev OK">Col. 2 header really long text</th>
+                <th>Col. 2 header really long text that is too big to read that well OK that it is</th>
             </tr>
             <tr>
-                <th>Row 1 header</th>
                 <td>C1R1</td>
                 <td>C1R2</td>
             </tr>
             <tr>
-                <th>Row 2 header</th>
                 <td>C2R1</td>
                 <td>C2R2</td>
             </tr>
