--- a/test/core/guidelineLoading.html
+++ b/test/core/guidelineLoading.html
@@ -13,27 +13,31 @@
   <script>
     (function(global) {
       global.quailTest = function() {
-        test('quailEventTester', function() {
-           var testPasses = false;
-           $.ajax({ url : '../../dist/tests.json',
-             async : false,
-             dataType : 'json',
-             cache : false,
-             success : function(data) {
-                if(typeof data === 'object') {
-                  $(document).quail({ jsonPath : '../../dist',
-                              guideline : '508',
-                              reset : true,
-                              accessibilityTests : data,
-                              testFailed : function(event) {
-                                if(event.testability == 1 && event.testName == 'imgHasAlt') {
-                                  testPasses = true;
-                                }
-                              }});
-                }
-            }});
-            equal(true, testPasses, 'The test has passed');
+        asyncTest('quailEventTester', function() {
+          expect(1);
+          var testPasses = false;
+          $.ajax({
+            url : '../../dist/tests.json',
+            async : false,
+            dataType : 'json',
+            cache : false,
+            success : function(data) {
+              if(typeof data === 'object') {
+                $(document).quail({
+                  jsonPath : '../../dist',
+                  guideline : '508',
+                  reset : true,
+                  accessibilityTests : data,
+                  testFailed : function(eventName, thisTest, _case) {
+                    if (thisTest.get('name') === 'imgHasAlt') {
+                      equal(true, testPasses, 'The test has passed');
+                    }
+                  }
+                });
+              }
+            }
           });
+        });
       };
     })(this);
   </script>
