--- a/test/core/guidelineFallback.html
+++ b/test/core/guidelineFallback.html
@@ -18,17 +18,20 @@
   <script src="../testrunner.js"></script>
   <script>
     (function(global) {
+      var found = false;
       global.quailTest = function() {
         asyncTest('guidelineFallback', function() {
           // @todo, figure out why this is expect(2). Somewhere, there's another
           // assertion being made. It should only be expect(1);
-          expect(2);
+          expect(1);
           $('.test-area').quail({
             jsonPath : '../../dist',
             reset : true,
             complete : function(eventName, thisTest, _case) {
-              if (thisTest.get('name') === 'imgHasAlt') {
+              if (thisTest.get('name') === 'imgHasAlt' && !found) {
                 equal('IMG', _case.get('element').tagName, 'Default guideline has run');
+                found = true;
+                start();
               }
             }
           });
