--- a/test/accessibility-tests/documentHasTitleElement-fail.html
+++ b/test/accessibility-tests/documentHasTitleElement-fail.html
@@ -9,14 +9,15 @@
 	<script>
     (function(global) {
       global.quailTest = function() {
-        $(document).quail({ jsonPath : '../../dist',
-          guideline : [ 'documentHasTitleElement' ],
-          reset : true,
-          testFailed : function(event) {
-          	test('HTML element selected', function() {
-          		ok(event.element.is('html'), 'HTML element failed test');
-          	});
-          }
+        asyncTest('HTML element selected', function() {
+          $(document).quail({ jsonPath : '../../dist',
+            guideline : [ 'documentHasTitleElement' ],
+            reset : true,
+            complete : function(eventName, thisTest, _case) {
+          		ok(_case.get('status') === 'failed', 'The document does not have a title element.');
+              start();
+            }
+          });
         });
       };
     })(this);
