--- a/test/accessibility-tests/elementAttributesAreValid.html
+++ b/test/accessibility-tests/elementAttributesAreValid.html
@@ -4,61 +4,22 @@
 	<title>elementAttributesAreValid</title>
 </head>
 <body>
-	<div>
-	<p>This paragraph is fine</p><a href="somewhere.html">This link is fine</a>
-	<a class="quail-failed-element" href="something.html>Link</a>
-	<a class="quail-failed-element" href="something.html"title="Something">Link</a>
-	<a class="quail-failed-element" href="something.html" title=Something Else>Link</a>
-	"</div>
+  <div class="quail-test" data-expected="pass" data-accessibility-test="elementAttributesAreValid">
+    <p id="test-1">This paragraph is fine</p><a href="somewhere.html">This link is fine</a>
+  </div>
+
+  <!--
+  <div class="quail-test" data-expected="fail" data-accessibility-test="elementAttributesAreValid">
+    <a id="test-2" class="quail-failed-element" href="something.html>Link</a>"
+  </div>
+  <div class="quail-test" data-expected="fail" data-accessibility-test="elementAttributesAreValid">
+    <a id="test-3" class="quail-failed-element" href="something.html"title="Something">Link</a>
+  </div>
+  <div class="quail-test" data-expected="fail" data-accessibility-test="elementAttributesAreValid">
+    <a id="test-4" class="quail-failed-element" href="something.html" title=Something Else>Link</a>
+  </div> -->
+
 	<script src="../../lib/node-htmlparser/lib/htmlparser.js"></script>
 	<script src="../testrunner.js"></script>
-	<script>
-    return;
-    (function(global) {
-      global.quailTest = function() {
-        $('body').quail({ jsonPath : '../../dist',
-                          guideline : [ 'elementAttributesAreValid' ],
-                          reset : true,
-                          htmlSource : '<p>This paragraph is fine</p><a href="somewhere.html">This link is fine</a>',
-                          complete: function(data) {
-                          	test('All attributes were well formed', function() {
-                          		equal(data.results.elementAttributesAreValid.elements.length, 0, 'No failed elements were found.');
-                          	});
-                          }
-                      });
-        $('body').quail({ jsonPath : '../../dist',
-                          guideline : [ 'elementAttributesAreValid' ],
-                          reset : true,
-                          htmlSource : '<a class="quail-failed-element" href="something.html>Link</a>',
-                          complete: function(data) {
-                          	test('Attribute was not closed with quote', function() {
-                          		equal(data.results.elementAttributesAreValid.elements.length, 1, 'One element was not closed.');
-                          	});
-                          }
-                      });
-				$('body').quail({ jsonPath : '../../dist',
-				                guideline : [ 'elementAttributesAreValid' ],
-				                reset : true,
-				                htmlSource : '<a class="quail-failed-element" href="something.html"title="Something">Link</a>',
-				                complete: function(data) {
-				                	test('Attributes not separated by a space', function() {
-				                		ok(data.results.elementAttributesAreValid.elements.length > 0, 'Attribute not separated by space.');
-				                	});
-				                }
-				            });
-				$('body').quail({ jsonPath : '../../dist',
-				                guideline : [ 'elementAttributesAreValid' ],
-				                reset : true,
-				                htmlSource : '<a class="quail-failed-element" href="something.html" title=Something Else>Link</a>',
-				                complete: function(data) {
-				                	test('No quote around attribute with space', function() {
-				                		ok(data.results.elementAttributesAreValid.elements.length > 0, 'No quote around attribute with space.');
-				                	});
-				                }
-				            });
-      };
-    })(this);
-  </script>
 </body>
-
 </html>
