--- a/test/accessibility-tests/languageDirAttributeIsUsed.html
+++ b/test/accessibility-tests/languageDirAttributeIsUsed.html
@@ -5,7 +5,7 @@
     <title>languageDirAttributeIsUsed</title>
 </head>
 <body>
-    <div class="quail-test" data-expected="fail" data-accessibility-test="languageDirAttributeIsUsed">
+    <div class="quail-test" data-expected="div[dir='ltr']:ignore|p:ignore|span:fail" data-accessibility-test="languageDirAttributeIsUsed">
         <div dir="ltr">
             <p class="quail-failed-element">
                 The title says "
