--- a/test/accessibility-tests/linkUsedForAlternateContent-fail.html
+++ b/test/accessibility-tests/linkUsedForAlternateContent-fail.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<wrap class="quail-test" data-expected="fail" data-accessibility-test="linkUsedForAlternateContent">
-<html>
+<html class="quail-test" data-expected="fail" data-scope="document" data-accessibility-test="linkUsedForAlternateContent">
 	<head>
 		<title>linkUsedForAlternateContent-fail</title>
 	</head>
@@ -9,4 +8,3 @@
 		<script src="../testrunner.js"></script>
 	</body>
 </html>
-</wrap>
