--- a/test/accessibility-tests/linkUsedForAlternateContent-pass.html
+++ b/test/accessibility-tests/linkUsedForAlternateContent-pass.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="quail-test" data-expected="fail" data-accessibility-test="linkUsedForAlternateContent">
+<html class="quail-test" data-expected="pass" data-accessibility-test="linkUsedForAlternateContent">
 	<head>
     <link rel="alternate" href="alternate.txt">
 		<title>linkUsedForAlternateContent-pass</title>
