--- a/test/accessibility-tests/scriptInBodyMustHaveNoscript-fail.html
+++ b/test/accessibility-tests/scriptInBodyMustHaveNoscript-fail.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="quail-test" data-expected="fail" data-scope="document" data-accessibility-test="scriptInBodyMustHaveNoscript">
 <head>
 	<title>scriptInBodyMustHaveNoscript-fail</title>
 </head>
@@ -7,20 +7,5 @@
 	<p>There is a script element on this page.</p>
 
 	<script src="../testrunner.js"></script>
-	<script>
-    (function(global) {
-      global.quailTest = function() {
-        $(document).quail({ jsonPath : '../../dist',
-          guideline : [ 'scriptInBodyMustHaveNoscript' ],
-          reset : true,
-          testFailed : function(event) {
-            test('Body element selected', function() {
-                ok(event.element.is('body'), 'Body element had script tag, but no no-script tag.');
-            });
-          }
-        });
-      };
-    })(this);
-  </script>
 </body>
 </html>
