--- a/test/core/eventComplete.html
+++ b/test/core/eventComplete.html
@@ -13,27 +13,19 @@
   <script>
     (function(global) {
       global.quailTest = function() {
-        test('quailEventComplete', function() {
-           var testPasses = false;
-           $.ajax({ url : '../../dist/tests.json',
-             async : false,
-             dataType : 'json',
-             cache : false,
-             success : function(data) {
-                if(typeof data === 'object') {
-                  $(document).quail({ jsonPath : '../../dist',
-                              guideline : [ 'imgHasAlt' ],
-                              reset : true,
-                              accessibilityTests : data,
-                              complete : function(results) {
-                                if(results.totals.severe == 1) {
-                                  testPasses = true;
-                                }
-                              }});
-                }
+        asyncTest('quailEventComplete', function () {
+          expect(3);
+          $(document).quail({
+            jsonPath : '../../dist',
+            guideline : [ 'imgHasAlt' ],
+            reset : true,
+            complete : function(eventName, thisTest, _case) {
+              ok(typeof eventName === 'string', 'The eventname argument is a string');
+              ok(thisTest instanceof quail.lib.Test, 'The test argument is an instance of quail.lib.Test');
+              ok(_case instanceof quail.lib.Case, 'The case argument is an instance of quail.lib.Case');
+              start();
             }});
-            equal(true, testPasses, 'The test has passed');
-          });
+        });
       };
     })(this);
   </script>
