--- a/test/core/htmlSource.html
+++ b/test/core/htmlSource.html
@@ -13,39 +13,25 @@
       global.quailTest = function() {
         var custom = {
           htmlSourceAjaxTest : {
-              type : 'custom',
-              components: [ 'htmlSource' ],
-              callback : function(quail) {
-                  quail.components.htmlSource.getHtml(function(html, parsed) {
-                    test('htmlSourceAjaxTest', function() {
-                    equal(true, html.search('class="one" class="two"') > -1, 'HTML string before DOM is loaded.');
-                    });
-                  });
-              }
-          },
-          htmlSourcePassedStringTest : {
-              type : 'custom',
-              components: [ 'htmlSource' ],
-              callback : function(quail) {
-                  quail.components.htmlSource.getHtml(function(html, parsed) {
-                    test('htmlSourcePassedStringTest', function() {
-                    equal(true, html.search('class="a" class="b"') > -1, 'HTML string before DOM is loaded.');
-                    });
-                  });
-              }
+            type : 'custom',
+            components: [ 'htmlSource' ],
+            callback : function(quail) {
+              quail.components.htmlSource.getHtml(function(html, parsed) {
+                ok(html.search('class="one" class="two"') > -1, 'HTML string before DOM is loaded.');
+                start();
+              });
+            }
           }
         };
-        $('body').quail({ jsonPath : '../../dist',
-                            guideline : [ 'htmlSourceAjaxTest' ],
-                            reset : true,
-                            customTests : custom
-                        });
-        $('body').quail({ jsonPath : '../../dist',
-                            guideline : [ 'htmlSourcePassedStringTest' ],
-                            reset : true,
-                            htmlSource : '<p class="a" class="b">This page should load HTML code.</p>',
-                            customTests : custom
-                        });
+        asyncTest('htmlSourceAjaxTest', function () {
+          expect(1);
+          $('body').quail({
+            jsonPath : '../../dist',
+            guideline : [ 'htmlSourceAjaxTest' ],
+            reset : true,
+            customTests : custom
+          });
+        });
       };
     })(this);
   </script>
