Added an expect() to core/defaultLanguageFound
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/core/defaultLanguageFound.html
+++ b/test/core/defaultLanguageFound.html
@@ -35,6 +35,7 @@
         };
 
         asyncTest('Default langauge found in current element', function() {
+          expect(1);
           $('.current-element').quail({
             jsonPath : '../../dist',
             guideline : [ 'findCurrentLanguage' ],
