--- a/test/accessibility-tests/cssTextHasContrast.html
+++ b/test/accessibility-tests/cssTextHasContrast.html
@@ -8,9 +8,36 @@
       color: #C8D8DF;
     }
 
+    #test-1b p {
+      background: #E9E9E9;
+      color: #C8D8DF;
+      font-size: 32px;
+      font-weight: bold;
+    }
+
     #test-2 p {
       background: #E9E9E9;
       color: #000;
+    }
+
+    #test-3 p {
+      background: #E9E9E9;
+      color: #666;
+      font-size: 16px;
+    }
+
+    #test-4 p {
+      background: #E9E9E9;
+      color: #666;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    #test-5 p {
+      background: #E9E9E9;
+      color: #666;
+      font-size: 16px;
+      font-weight: 700;
     }
   </style>
 </head>
@@ -19,8 +46,24 @@
     <p>This text is not readable</p>
   </div>
 
+  <div class="quail-test" data-expected="fail" data-accessibility-test="cssTextHasContrast" id="test-1b">
+    <p>This text is not readable, even if it's huge and bold</p>
+  </div>
+
   <div class="quail-test" data-expected="pass" data-accessibility-test="cssTextHasContrast" id="test-2">
     <p>This test is readable.</p>
+  </div>
+
+  <div class="quail-test" data-expected="fail" data-accessibility-test="cssTextHasContrast" id="test-3">
+    <p>This test is not readable, only 16px and not bold</p>
+  </div>
+
+  <div class="quail-test" data-expected="pass" data-accessibility-test="cssTextHasContrast" id="test-4">
+    <p>This test is readable, 16px and bold</p>
+  </div>
+
+  <div class="quail-test" data-expected="pass" data-accessibility-test="cssTextHasContrast" id="test-5">
+    <p>This test is readable, 16px and font weight 700</p>
   </div>
 
   <script src="../quail-testrunner.js"></script>
