better testing for gradients using helper lib

--- a/test/accessibility-tests/cssTextHasContrast.html
+++ b/test/accessibility-tests/cssTextHasContrast.html
@@ -119,7 +119,7 @@
     <p>This test is readable</p>
   </div>
 
-  <div class="quail-test" data-expected="pass" data-accessibility-test="cssTextHasContrast" id="test-7b">
+  <div class="quail-test" data-expected="fail" data-accessibility-test="cssTextHasContrast" id="test-7b">
     <p>This test is readable</p>
   </div>
 
