added a radial gradient

--- a/test/accessibility-tests/cssTextHasContrast.html
+++ b/test/accessibility-tests/cssTextHasContrast.html
@@ -76,6 +76,12 @@
       background-image: linear-gradient(to right, red, #f06d06, rgb(255, 255, 0), green);
     }
 
+    #test-7c p {
+      color: #fff;
+      padding: 10px;
+      background-image: radial-gradient(red, #f06d06, rgb(255, 255, 0), green);
+    }
+
   </style>
 </head>
 <body>
@@ -120,6 +126,10 @@
   </div>
 
   <div class="quail-test" data-expected="fail" data-accessibility-test="cssTextHasContrast" id="test-7b">
+    <p>This test is readable</p>
+  </div>
+
+  <div class="quail-test" data-expected="fail" data-accessibility-test="cssTextHasContrast" id="test-7c">
     <p>This test is readable</p>
   </div>
 
